Fix build and layout issues (#1)

--- a/src/components/PhononVisualizer.scss
+++ b/src/components/PhononVisualizer.scss
@@ -1,9 +1,3 @@
-@media (max-width: 1400px) {
-  .visualizer-panel:not(:last-child) {
-    margin-bottom: 1.5em;
-  }
-}
-
 .visualizer-panel {
   .card {
     height: 100%;
